<resources>
    <string name="app_name">GrafitisMap</string>

    <string name="login_button">Login</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_msg">Bienvenido a GrafitisMap</string>
    <string name="login_title">Logueate con tu cuenta</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Contraseña</string>
    <string name="sign_up">Regístrate</string>
    <string name="signup_title">Crea tu cuenta</string>
    <string name="signup_btn">Crear cuenta</string>
    <string name="drawer_item_map">Ver mapa</string>
    <string name="drawer_menu_item_markers">Marcadores</string>

    <!-- Dropdown category -->
    <string-array name="category">
        <item>Acontecimiento</item>
        <item>Edificio</item>
    </string-array>
</resources>